moved hero css to base, changed weights, pricing cards tweaks

--- a/src/about.njk
+++ b/src/about.njk
@@ -14,7 +14,7 @@
         </h1>
 
         <p class="text-light mb-3 pt-3 pb-4 p-2">
-            At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is here to
+            At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is <br>here to
             help.
         </p>
 
