--- a/src/assets/css/pricing.css
+++ b/src/assets/css/pricing.css
@@ -31,7 +31,7 @@
 }
 
 .what-we-do .card-header {
-    background-color: var(--primary-color);
+    background-color: #041536;
     color: #fff;
     padding: 1.5rem;
     border-radius: 0.25rem 0.25rem 0 0;
@@ -71,23 +71,15 @@
     flex-direction: column;
 }
 
-/* brand header background */
 .bg-brand {
     background-color: #1f3e5c;
-    /* adjust to match your navy */
 }
 
-/* ensure consistent icon/text alignment if needed */
 .what-we-do .card-header i {
     flex-shrink: 0;
 }
 
-/* optional: tighten paragraph to better match screenshot */
-/*.what-we-do .card-body p {*/
-/*	font-size: 0.95rem;*/
-/*}*/
 
-/* RESPONSIVE ADJUSTMENTS */
 @media (max-width: 767.98px) {
     .section-bg-title {
         font-size: 3rem;
@@ -142,7 +134,7 @@
 }
 
 .price-btn {
-    background-color: #041536;
+    background-color: var(--primary-color, #00adef)
 }
 
 .pricing-container {
