--- a/src/index.njk
+++ b/src/index.njk
@@ -38,7 +38,7 @@
             Financial Strategy for Hardworking American Business Owners
         </h2>
         <p class="h5 fw-semibold mb-4">
-            Mojo CFO specializes in owner-operated businesses generating $1-$75M in annual revenue.
+            Mojo CFO specializes in American-owned businesses generating $1-$75M in annual revenue.
         </p>
         <p class="lead mx-auto" style="max-width: 800px;">
             Our expertise is in everything finance and accounting. We take care of the finances so you can
@@ -71,7 +71,7 @@
                     We’ve done it all with a focus on serving clients across a number of industries.
                 </p>
                 <p class="mb-4">How would you like us to help you?</p>
-                <a href="#" class="learn-more text-decoration-none fw-bold">Learn More</a>
+                <a href="/contact" class="learn-more text-decoration-none fw-bold">Learn More</a>
             </div>
             <div class="col-md-6 order-1 order-md-2 position-relative mb-4 mb-md-0">
                 <div class="bg-block d-none d-md-block"></div>
@@ -172,7 +172,6 @@
 <section class="container py-5">
     <div class="text-center mb-4">
         <h2 class="text-uppercase testimonials-heading text-muted">Who We've Worked With</h2>
-        <h3 class="fw-bold testimonials-sub-heading">Our Clients</h3>
     </div>
 
     <section class="bg-white p-5 text-center">
