--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -34,8 +34,8 @@
                     <ul class="navbar-nav mx-lg-auto align-items-lg-center gap-lg-2">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/pricing">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/about">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="/faq">FAQ</a></li>
 
                         <!-- Mobile CTA (full width inside collapse) -->
