--- a/src/index.njk
+++ b/src/index.njk
@@ -206,7 +206,7 @@
             Ready to take the next step?
         </h2>
         <p class="cta-text text-white mb-4 p-2">
-            Schedule a meeting with our Team to discuss how Mojo CFO can support your business’s financial
+            Schedule a meeting with our Team to discuss how Mojo CFO can support your business’ financial
             growth and stability.
         </p>
         <a href="https://forms.gle/HW7q5Bn8mr4QP6s3A" target="_blank" class="btn btn-primary btn-lg cta-btn">
@@ -236,10 +236,10 @@
             },
             breakpoints: {
                 0: {slidesPerView: 1, spaceBetween: 12},
-                576: {slidesPerView: 2, spaceBetween: 16},
-                768: {slidesPerView: 3, spaceBetween: 20},
-                992: {slidesPerView: 4, spaceBetween: 24},
-                1200: {slidesPerView: 5, spaceBetween: 24},
+                576: {slidesPerView: 1, spaceBetween: 16},
+                768: {slidesPerView: 1, spaceBetween: 20},
+                992: {slidesPerView: 1, spaceBetween: 24},
+                1200: {slidesPerView: 1, spaceBetween: 24},
             }
         });
 
