--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -67,55 +67,12 @@
     padding-bottom: 1rem;
 }
 
-.testimonials-sub-heading {
-    font-size: 3rem;
-    font-weight: 500;
-    padding-bottom: 1.5rem;
-}
-
-.test-card {
-    padding: 2rem 1rem;
-}
-
-.testimonial-text {
-    font-size: 1.6rem;
-    line-height: 1.6;
-}
-
-.testimonial-author {
-    font-size: 2rem;
-    font-weight: 500;
-}
-
-.testimonial-company {
-    font-size: 1rem;
-    font-weight: 500;
-}
-
-#testimonialCarousel .carousel-control-prev,
-#testimonialCarousel .carousel-control-next {
-    width: 2.5rem;
-    height: 2.5rem;
-    background-color: #000;
-    border-radius: 50%;
-}
-
-#testimonialCarousel .carousel-control-prev-icon,
-#testimonialCarousel .carousel-control-next-icon {
-    background-size: 1.2rem 1.2rem;
-}
-
-/* 1) Hide the default Swiper SVG backgrounds */
-.my-testimonial-swiper .swiper-button-prev,
-.my-testimonial-swiper .swiper-button-next {
-    background: none;
-}
 
 /* 2) Inject your own light-grey arrows */
-.my-testimonial-swiper .swiper-button-prev::after,
-.my-testimonial-swiper .swiper-button-next::after {
+.swiper-button-prev::after,
+.swiper-button-next::after {
     content: '';
-    font-size: 1.8rem;
+    font-size: 2.0rem;
     color: #ccc;
     position: absolute;
     top: 50%;
@@ -124,15 +81,17 @@
 }
 
 /* ← on the left */
-.my-testimonial-swiper .swiper-button-prev::after {
+.swiper-button-prev::after {
     content: '←';
     left: 0.5rem;
+    color: black;
 }
 
 /* → on the right */
-.my-testimonial-swiper .swiper-button-next::after {
+.swiper-button-next::after {
     content: '→';
     right: 0.5rem;
+    color: black;
 }
 
 
@@ -190,30 +149,6 @@
     .testimonials-heading {
         font-size: 4rem;
     }
-
-    .testimonials-sub-heading {
-        font-size: 1.5rem;
-    }
-
-    .testimonial-author {
-        font-size: 1.75rem;
-    }
-
-    .testimonial-company {
-        font-size: 0.9rem;
-    }
-
-    #testimonialCarousel .test-card .card-body p.fst-italic {
-        font-size: 1.4rem;
-    }
-
-    #testimonialCarousel .test-card .card-body h5.fw-bold {
-        font-size: 1.75rem;
-    }
-
-    #testimonialCarousel .test-card .card-body p.text-muted {
-        font-size: 0.9rem;
-    }
 }
 
 /* Phones down (≤576px) */
@@ -269,37 +204,6 @@
         font-size: 2.5rem;
     }
 
-    .testimonials-sub-heading {
-        font-size: 1.25rem;
-    }
-
-    .testimonial-author {
-        font-size: 1.5rem;
-    }
-
-    .testimonial-company {
-        font-size: 0.8rem;
-    }
-
-    #testimonialCarousel .card {
-        height: 150vh;
-    }
-
-    #testimonialCarousel .carousel-inner {
-        touch-action: pan-y;
-    }
-
-    #testimonialCarousel .test-card .card-body p.fst-italic {
-        font-size: 1rem;
-    }
-
-    #testimonialCarousel .test-card .card-body h5.fw-bold {
-        font-size: 1.5rem;
-    }
-
-    #testimonialCarousel .test-card .card-body p.text-muted {
-        font-size: 0.8rem;
-    }
 }
 
 .strategy-section {
@@ -337,19 +241,6 @@
 
 /* Responsive tweaks for .strategy-section */
 @media (max-width: 767.98px) {
-
-    /* Mobile */
-    .strategy-section {
-        min-height: 250px;
-        padding: 2rem 1rem;
-        background-image:
-            linear-gradient(to right,
-                rgba(255, 255, 255, 0.3) 0%,
-                rgba(255, 255, 255, 0.9) 25%,
-                rgba(255, 255, 255, 1.0) 75%,
-                rgba(255, 255, 255, 0.3) 100%),
-            url('/assets/images/farm_photo.jpg');
-    }
 
     .strategy-section h2 {
         font-size: 1.5rem;
